[package]
name = "learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gen_cert"
path = "tools/gen_certs.rs"

[[bin]]
name = "gen_config"
path = "tools/gen_config.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
certify = "0.3"
anyhow = "1"
prost = "0.8.0"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
thiserror = "1"
sled = "0.34"
tokio-rustls = "0.22"
yamux = "0.9"
dashmap = "4"
http = "0.2.5"
tracing = "0.1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1.1.0"
flate2 = "1.0.22"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
prost-build = "0.8.0"